--- a/Biblioteca/app/src/main/res/layout/activity_crear.xml
+++ b/Biblioteca/app/src/main/res/layout/activity_crear.xml
@@ -43,9 +43,16 @@
             android:text="Crear"
             android:layout_width="159dp"
             android:layout_height="70dp" android:id="@+id/btnCrear"
-            android:layout_marginEnd="132dp" app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintBottom_toBottomOf="parent" android:layout_marginBottom="36dp"
+            android:layout_marginEnd="36dp" app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent" android:layout_marginBottom="52dp"
             android:onClick="crearLibro"/>
+    <Button
+            android:text="Volver"
+            android:layout_width="159dp"
+            android:layout_height="70dp" android:id="@+id/btnVolverInicio"
+            android:layout_marginEnd="216dp" app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent" android:layout_marginBottom="52dp"
+            android:onClick="volver"/>
     <TextView
             android:text="Título"
             android:layout_width="wrap_content"
