--- a/Biblioteca/app/src/main/res/layout/activity_lista_libros.xml
+++ b/Biblioteca/app/src/main/res/layout/activity_lista_libros.xml
@@ -3,10 +3,10 @@
                                                    xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
                                                    android:layout_height="match_parent">
     <ScrollView
-            android:layout_width="409dp"
-            android:layout_height="574dp"
+            android:layout_width="407dp"
+            android:layout_height="464dp"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" android:layout_marginTop="48dp">
+            app:layout_constraintTop_toTopOf="parent" android:layout_marginTop="92dp">
 
         <LinearLayout
                 android:id="@+id/linear_layout_libros"
@@ -16,5 +16,12 @@
             <!-- Los TextViews se agregarán aquí -->
         </LinearLayout>
     </ScrollView>
+    <Button
+            android:text="Volver"
+            android:layout_width="152dp"
+            android:layout_height="70dp" android:id="@+id/btnVolverDesdeLista"
+            android:onClick="volver"
+            app:layout_constraintBottom_toBottomOf="parent" android:layout_marginBottom="64dp"
+            android:layout_marginEnd="120dp" app:layout_constraintEnd_toEndOf="parent"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
