--- a/Biblioteca/app/src/main/res/layout/activity_crear.xml
+++ b/Biblioteca/app/src/main/res/layout/activity_crear.xml
@@ -1,7 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-                                                   xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
-                                                   android:layout_height="match_parent">
+                                                   xmlns:app="http://schemas.android.com/apk/res-auto"
+                                                   xmlns:tools="http://schemas.android.com/tools"
+                                                   android:layout_width="match_parent"
+                                                   android:layout_height="match_parent"
+                                                   android:background="@color/negroPrincipal">
 
     <EditText
             android:layout_width="217dp"
@@ -9,8 +12,10 @@
             android:inputType="text"
             android:ems="10"
             android:id="@+id/introducirTitulo"
-            android:layout_marginEnd="105dp"
-            app:layout_constraintEnd_toEndOf="parent" android:layout_marginBottom="20dp"
+            android:layout_marginEnd="104dp"
+            app:layout_constraintEnd_toEndOf="parent"
+            android:background="@drawable/edittext_background"
+            android:textColorHint="@color/white" android:hint="Escribe Aqui..." android:layout_marginBottom="10dp"
             app:layout_constraintBottom_toTopOf="@+id/textView7"/>
     <EditText
             android:layout_width="217dp"
@@ -18,8 +23,10 @@
             android:inputType="text"
             android:ems="10"
             android:id="@+id/introducirAutor"
-            android:layout_marginEnd="105dp"
-            app:layout_constraintEnd_toEndOf="parent" android:layout_marginBottom="8dp"
+            android:layout_marginEnd="104dp"
+            app:layout_constraintEnd_toEndOf="parent"
+            android:background="@drawable/edittext_background"
+            android:textColorHint="@color/white" android:hint="Escribe Aqui..." android:layout_marginBottom="11dp"
             app:layout_constraintBottom_toTopOf="@+id/textView8"/>
     <EditText
             android:layout_width="217dp"
@@ -27,8 +34,10 @@
             android:inputType="number"
             android:ems="10"
             android:id="@+id/introducirPaginas"
-            android:layout_marginEnd="105dp"
-            app:layout_constraintEnd_toEndOf="parent" android:layout_marginBottom="16dp"
+            android:layout_marginEnd="104dp"
+            app:layout_constraintEnd_toEndOf="parent"
+            android:background="@drawable/edittext_background"
+            android:textColorHint="@color/white" android:hint="Escribe Aqui..." android:layout_marginBottom="15dp"
             app:layout_constraintBottom_toTopOf="@+id/textView12"/>
     <EditText
             android:layout_width="217dp"
@@ -36,45 +45,50 @@
             android:inputType="date"
             android:ems="10"
             android:id="@+id/introducirFecha"
-            android:layout_marginEnd="105dp"
-            app:layout_constraintEnd_toEndOf="parent" android:layout_marginBottom="66dp"
-            app:layout_constraintBottom_toTopOf="@+id/btnCrear"/>
+            android:layout_marginEnd="104dp"
+            app:layout_constraintEnd_toEndOf="parent" android:layout_marginBottom="84dp"
+            app:layout_constraintBottom_toTopOf="@+id/btnCrear" android:background="@drawable/edittext_background"
+            android:textColorHint="@color/white" android:hint="YYYY-MM-DD"/>
     <Button
             android:text="Crear"
             android:layout_width="159dp"
             android:layout_height="70dp" android:id="@+id/btnCrear"
             android:layout_marginEnd="36dp" app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintBottom_toBottomOf="parent" android:layout_marginBottom="52dp"
-            android:onClick="crearLibro"/>
+            android:onClick="crearLibro" android:backgroundTint="@color/azulPrincipal"/>
     <Button
             android:text="Volver"
             android:layout_width="159dp"
             android:layout_height="70dp" android:id="@+id/btnVolverInicio"
             android:layout_marginEnd="216dp" app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintBottom_toBottomOf="parent" android:layout_marginBottom="52dp"
-            android:onClick="volver"/>
+            android:onClick="volver" android:backgroundTint="@color/azulPrincipal"/>
     <TextView
             android:text="Título"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content" android:id="@+id/textView3"
             android:textSize="25dp" android:layout_marginEnd="256dp" app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toTopOf="parent" android:layout_marginTop="110dp"/>
+            app:layout_constraintTop_toTopOf="parent" android:layout_marginTop="80dp"
+            android:textColor="@color/white"/>
     <TextView
             android:text="Autor"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content" android:id="@+id/textView7"
-            android:textSize="25dp" android:layout_marginEnd="259dp" app:layout_constraintEnd_toEndOf="parent"
-            android:layout_marginBottom="11dp" app:layout_constraintBottom_toTopOf="@+id/introducirAutor"/>
+            android:textSize="25dp" android:layout_marginEnd="260dp" app:layout_constraintEnd_toEndOf="parent"
+            android:textColor="@color/white" android:layout_marginBottom="12dp"
+            app:layout_constraintBottom_toTopOf="@+id/introducirAutor"/>
     <TextView
             android:text="Páginas"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content" android:id="@+id/textView8"
-            android:textSize="25dp" android:layout_marginEnd="230dp" app:layout_constraintEnd_toEndOf="parent"
-            android:layout_marginBottom="14dp" app:layout_constraintBottom_toTopOf="@+id/introducirPaginas"/>
+            android:textSize="25dp" android:layout_marginEnd="232dp" app:layout_constraintEnd_toEndOf="parent"
+            android:textColor="@color/white" android:layout_marginBottom="16dp"
+            app:layout_constraintBottom_toTopOf="@+id/introducirPaginas"/>
     <TextView
             android:text="Fecha"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content" android:id="@+id/textView12"
-            android:textSize="25dp" android:layout_marginEnd="254dp" app:layout_constraintEnd_toEndOf="parent"
-            android:layout_marginBottom="16dp" app:layout_constraintBottom_toTopOf="@+id/introducirFecha"/>
+            android:textSize="25dp" android:layout_marginEnd="252dp" app:layout_constraintEnd_toEndOf="parent"
+            android:textColor="@color/white" android:layout_marginBottom="17dp"
+            app:layout_constraintBottom_toTopOf="@+id/introducirFecha"/>
 </androidx.constraintlayout.widget.ConstraintLayout>
