--- a/Biblioteca/app/src/main/res/layout/activity_lista_libros.xml
+++ b/Biblioteca/app/src/main/res/layout/activity_lista_libros.xml
@@ -1,10 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-                                                   xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
-                                                   android:layout_height="match_parent">
+                                                   xmlns:app="http://schemas.android.com/apk/res-auto"
+                                                   xmlns:tools="http://schemas.android.com/tools"
+                                                   android:layout_width="match_parent"
+                                                   android:layout_height="match_parent"
+                                                   android:background="@color/negroPrincipal">
     <ScrollView
-            android:layout_width="407dp"
-            android:layout_height="464dp"
+            android:layout_width="386dp"
+            android:layout_height="467dp"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" android:layout_marginTop="92dp">
 
@@ -22,6 +25,7 @@
             android:layout_height="70dp" android:id="@+id/btnVolverDesdeLista"
             android:onClick="volver"
             app:layout_constraintBottom_toBottomOf="parent" android:layout_marginBottom="64dp"
-            android:layout_marginEnd="120dp" app:layout_constraintEnd_toEndOf="parent"/>
+            android:layout_marginEnd="120dp" app:layout_constraintEnd_toEndOf="parent"
+            android:backgroundTint="@color/azulPrincipal"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
