--- a/Biblioteca/app/src/main/res/values/colors.xml
+++ b/Biblioteca/app/src/main/res/values/colors.xml
@@ -2,4 +2,8 @@
 <resources>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="negroPrincipal">#101217</color>
+    <color name="azulPrincipal">#1a3c7d</color>
+    <color name="azulSecundario">#06296b</color>
+
 </resources>
