--- a/Biblioteca/app/src/main/res/layout/activity_crear.xml
+++ b/Biblioteca/app/src/main/res/layout/activity_crear.xml
@@ -7,48 +7,64 @@
                                                    android:background="@color/negroPrincipal">
 
     <EditText
-            android:layout_width="217dp"
-            android:layout_height="55dp"
-            android:inputType="text"
-            android:ems="10"
-            android:id="@+id/introducirTitulo"
-            android:layout_marginEnd="104dp"
-            app:layout_constraintEnd_toEndOf="parent"
-            android:background="@drawable/edittext_background"
-            android:textColorHint="@color/white" android:hint="Escribe Aqui..." android:layout_marginBottom="10dp"
-            app:layout_constraintBottom_toTopOf="@+id/textView7"/>
+        android:id="@+id/introducirTitulo"
+        android:layout_width="217dp"
+        android:layout_height="55dp"
+        android:layout_marginEnd="104dp"
+        android:layout_marginBottom="10dp"
+        android:background="@drawable/edittext_background"
+        android:ems="10"
+        android:hint="Escribe Aqui..."
+        android:inputType="text"
+        android:textColor="@color/white"
+        android:textColorHint="@color/white"
+        app:layout_constraintBottom_toTopOf="@+id/textView7"
+        app:layout_constraintEnd_toEndOf="parent" />
+
     <EditText
-            android:layout_width="217dp"
-            android:layout_height="55dp"
-            android:inputType="text"
-            android:ems="10"
-            android:id="@+id/introducirAutor"
-            android:layout_marginEnd="104dp"
-            app:layout_constraintEnd_toEndOf="parent"
-            android:background="@drawable/edittext_background"
-            android:textColorHint="@color/white" android:hint="Escribe Aqui..." android:layout_marginBottom="11dp"
-            app:layout_constraintBottom_toTopOf="@+id/textView8"/>
+        android:id="@+id/introducirAutor"
+        android:layout_width="217dp"
+        android:layout_height="55dp"
+        android:layout_marginEnd="104dp"
+        android:layout_marginBottom="11dp"
+        android:background="@drawable/edittext_background"
+        android:ems="10"
+        android:hint="Escribe Aqui..."
+        android:inputType="text"
+        android:textColor="@color/white"
+        android:textColorHint="@color/white"
+        app:layout_constraintBottom_toTopOf="@+id/textView8"
+        app:layout_constraintEnd_toEndOf="parent" />
+
     <EditText
-            android:layout_width="217dp"
-            android:layout_height="55dp"
-            android:inputType="number"
-            android:ems="10"
-            android:id="@+id/introducirPaginas"
-            android:layout_marginEnd="104dp"
-            app:layout_constraintEnd_toEndOf="parent"
-            android:background="@drawable/edittext_background"
-            android:textColorHint="@color/white" android:hint="Escribe Aqui..." android:layout_marginBottom="15dp"
-            app:layout_constraintBottom_toTopOf="@+id/textView12"/>
+        android:id="@+id/introducirPaginas"
+        android:layout_width="217dp"
+        android:layout_height="55dp"
+        android:layout_marginEnd="104dp"
+        android:layout_marginBottom="15dp"
+        android:background="@drawable/edittext_background"
+        android:ems="10"
+        android:hint="Escribe Aqui..."
+        android:inputType="number"
+        android:textColor="@color/white"
+        android:textColorHint="@color/white"
+        app:layout_constraintBottom_toTopOf="@+id/textView12"
+        app:layout_constraintEnd_toEndOf="parent" />
+
     <EditText
-            android:layout_width="217dp"
-            android:layout_height="55dp"
-            android:inputType="date"
-            android:ems="10"
-            android:id="@+id/introducirFecha"
-            android:layout_marginEnd="104dp"
-            app:layout_constraintEnd_toEndOf="parent" android:layout_marginBottom="84dp"
-            app:layout_constraintBottom_toTopOf="@+id/btnCrear" android:background="@drawable/edittext_background"
-            android:textColorHint="@color/white" android:hint="YYYY-MM-DD"/>
+        android:id="@+id/introducirFecha"
+        android:layout_width="217dp"
+        android:layout_height="55dp"
+        android:layout_marginEnd="104dp"
+        android:layout_marginBottom="84dp"
+        android:background="@drawable/edittext_background"
+        android:ems="10"
+        android:hint="YYYY-MM-DD"
+        android:inputType="date"
+        android:textColor="@color/white"
+        android:textColorHint="@color/white"
+        app:layout_constraintBottom_toTopOf="@+id/btnCrear"
+        app:layout_constraintEnd_toEndOf="parent" />
     <Button
             android:text="Crear"
             android:layout_width="159dp"
