--- a/Biblioteca/app/src/main/res/layout/cada_libro.xml
+++ b/Biblioteca/app/src/main/res/layout/cada_libro.xml
@@ -8,60 +8,39 @@
 
     <TextView
             android:text="Titulo"
-            android:layout_width="99dp"
-            android:layout_height="52dp" android:id="@+id/textView"
-            android:textSize="30sp" app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="59dp"
-            app:layout_constraintTop_toTopOf="parent" android:layout_marginTop="116dp"
-            android:textColor="@color/white"/>
+            android:layout_width="216dp"
+            android:layout_height="75dp" android:id="@+id/mostrarTitulo"
+            android:textSize="30sp" android:gravity="center"
+            android:textColor="@color/white"
+            app:layout_constraintTop_toTopOf="parent"
+            android:layout_marginTop="100dp" app:layout_constraintStart_toStartOf="parent"
+            android:layout_marginStart="96dp"/>
     <TextView
             android:text="Titulo"
-            android:layout_width="187dp"
-            android:layout_height="48dp" android:id="@+id/mostrarTitulo"
-            android:textSize="30sp" android:gravity="center|start" android:layout_marginEnd="21dp"
-            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintTop_toTopOf="parent"
-            android:layout_marginTop="116dp" android:textColor="@color/white"/>
+            android:layout_width="398dp"
+            android:layout_height="67dp" android:id="@+id/mostrarAutor"
+            android:textSize="28sp" android:gravity="center"
+            android:textColor="@color/white"
+            android:layout_marginTop="20dp"
+            app:layout_constraintTop_toBottomOf="@+id/mostrarTitulo"
+            app:layout_constraintEnd_toEndOf="parent"/>
     <TextView
             android:text="Titulo"
-            android:layout_width="187dp"
-            android:layout_height="48dp" android:id="@+id/mostrarAutor"
-            android:textSize="30sp" android:gravity="start" android:layout_marginEnd="21dp"
-            app:layout_constraintEnd_toEndOf="parent" android:layout_marginTop="16dp"
-            app:layout_constraintTop_toBottomOf="@+id/mostrarTitulo" android:textColor="@color/white"/>
+            android:layout_width="275dp"
+            android:layout_height="54dp" android:id="@+id/mostrarPag"
+            android:textSize="30sp" android:gravity="center"
+            android:textColor="@color/white"
+            android:layout_marginTop="44dp"
+            app:layout_constraintTop_toBottomOf="@+id/mostrarAutor"
+            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="68dp"/>
     <TextView
             android:text="Titulo"
-            android:layout_width="187dp"
-            android:layout_height="48dp" android:id="@+id/mostrarPag"
-            android:textSize="30sp" android:gravity="start" android:layout_marginEnd="21dp"
-            app:layout_constraintEnd_toEndOf="parent" android:layout_marginTop="26dp"
-            app:layout_constraintTop_toBottomOf="@+id/mostrarAutor" android:textColor="@color/white"/>
-    <TextView
-            android:text="Titulo"
-            android:layout_width="187dp"
-            android:layout_height="48dp" android:id="@+id/mostrarFecha"
-            android:textSize="30sp" android:gravity="start" android:layout_marginEnd="21dp"
-            app:layout_constraintEnd_toEndOf="parent" android:layout_marginTop="28dp"
-            app:layout_constraintTop_toBottomOf="@+id/mostrarPag" android:textColor="@color/white"/>
-    <TextView
-            android:text="Páginas"
-            android:layout_width="109dp"
-            android:layout_height="52dp" android:id="@+id/textView9"
-            android:textSize="30sp" app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="59dp"
-            android:layout_marginTop="21dp" app:layout_constraintTop_toBottomOf="@+id/textView10"
-            android:textColor="@color/white"/>
-    <TextView
-            android:text="Fecha"
-            android:layout_width="99dp"
-            android:layout_height="52dp" android:id="@+id/textView11"
-            android:textSize="30sp" app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="59dp"
-            android:layout_marginTop="24dp" app:layout_constraintTop_toBottomOf="@+id/textView9"
-            android:textColor="@color/white"/>
-    <TextView
-            android:text="Autor"
-            android:layout_width="99dp"
-            android:layout_height="52dp" android:id="@+id/textView10"
-            android:textSize="30sp" app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="59dp"
-            android:layout_marginTop="12dp" app:layout_constraintTop_toBottomOf="@+id/textView"
-            android:textColor="@color/white"/>
+            android:layout_width="267dp"
+            android:layout_height="59dp" android:id="@+id/mostrarFecha"
+            android:textSize="30sp" android:gravity="center"
+            android:textColor="@color/white"
+            android:layout_marginTop="40dp" app:layout_constraintTop_toBottomOf="@+id/mostrarPag"
+            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="68dp"/>
     <Button
             android:text="Volver"
             android:layout_width="137dp"
@@ -80,7 +59,7 @@
             android:text="Eliminar"
             android:layout_width="137dp"
             android:layout_height="68dp" android:id="@+id/btnEliminar"
-            android:layout_marginEnd="139dp" app:layout_constraintEnd_toEndOf="parent"
+            android:layout_marginEnd="124dp" app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintBottom_toBottomOf="parent" android:layout_marginBottom="56dp"
             android:onClick="eliminar" android:backgroundTint="@color/azulPrincipal"/>
 </androidx.constraintlayout.widget.ConstraintLayout>
