--- a/proyectoBar/Bar/app/src/main/res/layout/login.xml
+++ b/proyectoBar/Bar/app/src/main/res/layout/login.xml
@@ -1,6 +1,41 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:background="@color/fondo">
 
+    <TextView
+        android:id="@+id/textView"
+        android:layout_width="130dp"
+        android:layout_height="33dp"
+        android:fontFamily="@font/roboto"
+        android:text="Nombre de Mesa"
+        android:textColor="@color/white"
+        android:textSize="16dp"
+        tools:layout_editor_absoluteX="140dp"
+        tools:layout_editor_absoluteY="282dp" />
+
+    <EditText
+        android:id="@+id/editTextText"
+        android:layout_width="213dp"
+        android:layout_height="36dp"
+        android:background="@drawable/edittext"
+        android:ems="10"
+        android:hint="Escribe aquí..."
+        android:inputType="text"
+        android:textColor="@color/white"
+        android:textColorHint="@color/white"
+        tools:layout_editor_absoluteX="99dp"
+        tools:layout_editor_absoluteY="382dp" />
+
+    <Button
+        android:id="@+id/button"
+        android:layout_width="186dp"
+        android:layout_height="63dp"
+        android:text="Button"
+        app:cornerRadius="12dp"
+        tools:layout_editor_absoluteX="105dp"
+        tools:layout_editor_absoluteY="506dp" />
 </androidx.constraintlayout.widget.ConstraintLayout>
