--- a/proyectoBar/Bar/app/src/main/res/layout/activity_main.xml
+++ b/proyectoBar/Bar/app/src/main/res/layout/activity_main.xml
@@ -4,28 +4,26 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/fondo"
     tools:context=".MainActivity">
 
     <FrameLayout
         android:id="@+id/fragment_container"
         android:layout_width="412dp"
         android:layout_height="658dp"
+        android:background="@color/fondo"
         app:layout_constraintBottom_toTopOf="@+id/menu"
         app:layout_constraintEnd_toEndOf="parent" />
 
     <com.google.android.material.bottomnavigation.BottomNavigationView
         android:id="@+id/menu"
-        android:layout_width="410dp"
+        android:layout_width="412dp"
         android:layout_height="74dp"
-        android:layout_marginEnd="1dp"
-        android:layout_marginBottom="1dp"
-        android:background="?android:attr/windowBackground"
+        android:background="@color/fondo2"
         app:itemActiveIndicatorStyle="@color/black"
-        app:itemIconTint="@color/selectedItemColor"
-        app:itemTextColor="@color/selectedItemColor"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.571"
+        app:itemIconTint="@color/bottom_nav_colors"
+        app:itemTextColor="@color/bottom_nav_colors"
         app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/fragment_container"
         app:menu="@menu/bottom_navigation_menu" />
 </androidx.constraintlayout.widget.ConstraintLayout>
