--- a/proyectoBar/Bar/app/src/main/res/layout/menusdia.xml
+++ b/proyectoBar/Bar/app/src/main/res/layout/menusdia.xml
@@ -1,17 +1,82 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:background="@color/fondo"
+    android:fillViewport="true">
 
-    <TextView
-        android:id="@+id/hola"
-        android:layout_width="132dp"
-        android:layout_height="63dp"
-        android:layout_marginEnd="140dp"
-        android:layout_marginBottom="454dp"
-        android:text="menus"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent" />
-</androidx.constraintlayout.widget.ConstraintLayout>
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        android:padding="16dp">
+
+        <TextView
+            android:id="@+id/nombreMenuDia"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="16dp"
+            android:text="Nombre del Menú"
+            android:textColor="@color/white"
+            android:layout_marginLeft="14dp"
+            android:textSize="26sp" />
+
+        <TextView
+            android:id="@+id/nombreMenuDia2"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="17dp"
+            android:text="Primeros"
+            android:textColor="@color/white"
+            android:layout_marginLeft="14dp"
+            android:textSize="20sp" />
+
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/contenedorPrimeros"
+            android:layout_width="380dp"
+            android:layout_height="250dp"
+            android:layout_marginTop="8dp" />
+
+        <TextView
+            android:id="@+id/nombreMenuDia3"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="21dp"
+            android:text="Segundos"
+            android:layout_marginLeft="14dp"
+            android:textColor="@color/white"
+            android:textSize="20sp" />
+
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/contenedorSegundos"
+            android:layout_width="match_parent"
+            android:layout_height="250dp"
+            android:layout_marginTop="8dp" />
+
+        <TextView
+            android:id="@+id/nombreMenuDia4"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="26dp"
+            android:layout_marginLeft="14dp"
+            android:text="Bebidas"
+            android:textColor="@color/white"
+            android:textSize="20sp" />
+
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/contenedorBebidas"
+            android:layout_width="match_parent"
+            android:layout_height="250dp"
+            android:layout_marginTop="8dp" />
+
+        <Button
+            android:id="@+id/button"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_horizontal"
+            android:layout_marginTop="18dp"
+            android:backgroundTint="@color/acento"
+            android:text="Button" />
+    </LinearLayout>
+</ScrollView>
