--- a/proyectoBar/Bar/app/src/main/res/color/bottom_nav_colors.xml
+++ b/proyectoBar/Bar/app/src/main/res/color/bottom_nav_colors.xml
@@ -1,4 +1,4 @@
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
-    <item android:color="@color/colorItemSelected" android:state_checked="true" />
-    <item android:color="@color/colorItemUnselected"/>
+    <item android:color="@color/acento" android:state_checked="true" />
+    <item android:color="@color/white"/>
 </selector>
