--- a/proyectoBar/Bar/app/src/main/res/layout/bebidas.xml
+++ b/proyectoBar/Bar/app/src/main/res/layout/bebidas.xml
@@ -3,15 +3,16 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:background="@color/fondo"
+    android:backgroundTint="@color/fondo">
 
-    <TextView
-        android:id="@+id/hola"
-        android:layout_width="132dp"
-        android:layout_height="63dp"
-        android:layout_marginEnd="140dp"
-        android:layout_marginBottom="454dp"
-        android:text="hola"
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/contenedorListaBebidas"
+        android:layout_width="393dp"
+        android:layout_height="611dp"
+        android:layout_marginEnd="11dp"
+        android:layout_marginBottom="78dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent" />
 </androidx.constraintlayout.widget.ConstraintLayout>
