--- a/proyectoBar/Bar/app/src/main/res/layout/bebidas.xml
+++ b/proyectoBar/Bar/app/src/main/res/layout/bebidas.xml
@@ -9,10 +9,13 @@
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/contenedorListaBebidas"
-        android:layout_width="393dp"
-        android:layout_height="611dp"
-        android:layout_marginEnd="11dp"
-        android:layout_marginBottom="78dp"
+        android:layout_width="406dp"
+        android:layout_height="577dp"
+        android:layout_marginTop="70dp"
+        android:layout_marginBottom="76dp"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent" />
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.4"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 </androidx.constraintlayout.widget.ConstraintLayout>
