--- a/proyectoBar/Bar/app/src/main/res/layout/cadaconsumicion.xml
+++ b/proyectoBar/Bar/app/src/main/res/layout/cadaconsumicion.xml
@@ -32,6 +32,13 @@
         android:layout_marginBottom="10dp"
         android:text="Precio del Plato"
         android:textColor="@color/white" />
+    <TextView
+        android:id="@+id/cantidadConsumicion"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="10dp"
+        android:text="Cantidad"
+        android:textColor="@color/white" />
 
     <Button
         android:id="@+id/btnEliminarConsumicion"
