--- a/proyectoBar/Bar/app/src/main/res/layout/menusdia.xml
+++ b/proyectoBar/Bar/app/src/main/res/layout/menusdia.xml
@@ -89,7 +89,7 @@
                 app:layout_constraintTop_toTopOf="parent" />
 
             <TextView
-                android:id="@+id/cantidad"
+                android:id="@+id/cantidadMenu"
                 android:layout_width="39dp"
                 android:layout_height="17dp"
                 android:layout_marginTop="22dp"
