--- a/proyectoBar/Bar/app/src/main/res/layout/menusdia.xml
+++ b/proyectoBar/Bar/app/src/main/res/layout/menusdia.xml
@@ -33,7 +33,7 @@
             android:textSize="20sp" />
 
         <androidx.recyclerview.widget.RecyclerView
-            android:id="@+id/contenedorPrimeros"
+            android:id="@+id/contenedorConsumiciones"
             android:layout_width="380dp"
             android:layout_height="250dp"
             android:layout_marginTop="8dp" />
