--- a/proyectoBar/Bar/app/src/main/res/layout/pedidovista.xml
+++ b/proyectoBar/Bar/app/src/main/res/layout/pedidovista.xml
@@ -41,7 +41,7 @@ android:fillViewport="true">
         app:layout_constraintTop_toBottomOf="@+id/textView2" />
 
     <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/contenedorPrimeros"
+        android:id="@+id/contenedorConsumiciones"
         android:layout_width="380dp"
         android:layout_height="270dp"
         android:layout_marginStart="16dp"
@@ -58,7 +58,7 @@ android:fillViewport="true">
         android:layout_marginStart="27dp"
         android:layout_marginTop="48dp"
         android:layout_marginEnd="256dp"
-        android:text="Consumiciones"
+        android:text="Menus"
         android:textColor="@color/white"
         android:textSize="20sp"
         app:layout_constraintEnd_toEndOf="parent"
